...
                        android:onLongClick="@{(v) -> player.displayResize()}"
                        android:scaleType="center"
                        tools:visibility="visible"
                        vlc:srcCompat="@drawable/ic_player_ratio" />

                    <ImageView
                        android:id="@+id/player_overlay_adv_function"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="@dimen/small_margins_sides"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:contentDescription="@string/advanced"
...
